t/test-data/Models/bad/InvalidOut/Sub.nhd
*** general ***

author   = Jonathan Worthington
date     = 2018-03-13
taxonomy = InvalidOut::Sub

+short

  Module to help testing invalid output.

*** input ***

+monkeys
  type = integer
  validator = ge(0)
  ++labels
    en = Monkeys
    de = Affen
  ++units
    en = -

*** technical ***

+multiply
  value = 20
  ++units
    en = monkeys/hour
    de = affen/Stunde
  ++description
    tech1 parameter

*** output ***

+sub_result
  print = 7
  ++units
    en = monkeys/hour
    de = affen/Stunde
  ++formula
    Tech(multiply) * In(monkeys)
  ++description
    Final result
